svg map and fixed alignment

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -283,6 +283,7 @@ nav ul {
   height: 100%;
   z-index: 1;
   border-radius: 10px;
+  background-color: none;
 }
 
 nav ul li {
@@ -333,11 +334,11 @@ nav ul, nav ul li, nav ul li:last-child {
 
 #map {
   width: 100%;
-  height: 100%;
+  height: 85%;
   -o-object-fit: contain;
      object-fit: contain;
   padding: 1vh;
-  max-width: 100%;
+  transform: rotate(-10deg);
 }
 
 .footer {
